--- a/index.html
+++ b/index.html
@@ -1434,5 +1434,7 @@
         }
     });
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8956041194199572"
+     crossorigin="anonymous"></script>
 </body>
 </html>
