--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+  <script src="https://ligheechoagool.com/88/tag.min.js" data-zone="147446" async data-cfasync="false"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8956041194199572"
      crossorigin="anonymous"></script>
   <meta charset="UTF-8">
