--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8956041194199572"
-     crossorigin="anonymous"></script>
-
+  <script src="https://fpyf8.com/88/tag.min.js" data-zone="147446" async data-cfasync="false"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNXHWQ2TVP"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
