--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polityka Prywatności - Jurek36AI</title>
+    <title>Polityka Prywatności - ChatBotJ</title>
     <style>
         /* Podstawowe style dla czytelności */
         body {
@@ -77,10 +77,10 @@
 <body>
 
     <h1>POLITYKA PRYWATNOŚCI</h1>
-    <h2>Chatbot Jurek36AI</h2>
+    <h2>Chatbot ChatBotJ</h2>
     <p><strong>Data wejścia w życie:</strong> 17.05.2025</p>
 
-    <p>Niniejsza Polityka Prywatności określa zasady gromadzenia, wykorzystywania i ochrony Twoich danych osobowych podczas korzystania z chatbota AI Jurek36AI, dostępnego za pośrednictwem strony internetowej pod adresem www.jurek36ai.pl.</p>
+    <p>Niniejsza Polityka Prywatności określa zasady gromadzenia, wykorzystywania i ochrony Twoich danych osobowych podczas korzystania z chatbota AI ChatBotJ, dostępnego za pośrednictwem strony internetowej pod adresem www.ChatBotJ.pl.</p>
 
     <div class="contact-info">
         <p><strong>Administratorem Twoich danych osobowych przetwarzanych w związku z korzystaniem z Chatbota jest:</strong><br>
