--- a/index.html
+++ b/index.html
@@ -314,7 +314,6 @@
     .chat-send-button:hover { background-color: var(--accent-hover-color); }
     .chat-send-button:disabled { opacity: 0.6; cursor: not-allowed; }
 
-
     .message-wrapper { /* Dodatkowy wrapper dla wiadomości i jej akcji */
         display: flex;
         flex-direction: column;
@@ -387,7 +386,6 @@
     .edit-save-btn { background-color: var(--success-color); color: white; }
     .edit-cancel-btn { background-color: var(--danger-color); color: white; }
 
-
     .code-container {
         display: flex;
         position: relative;
@@ -435,7 +433,6 @@
     body.light-theme .hljs-comment, body.light-theme .hljs-quote { color: #a0a1a7; font-style: italic; }
     /* ... (więcej stylów dla jasnego motywu highlight.js jeśli potrzebne) ... */
     body:not(.light-theme) .hljs { /* Domyślne (ciemne) style highlight.js są już załadowane */ }
-
 
     .copy-button {
         position: absolute;
@@ -534,7 +531,6 @@
      .sidebar-new-chat-button {} /* Dziedziczy z .sidebar-button */
      .sidebar-export-chat-button {} /* Dziedziczy z .sidebar-button */
 
-
      @media (max-width: 600px) {
          .sidebar { width: 100%; }
          .chat-container { max-width: 95%; height: 88vh; } /* Zwiększona wysokość na mobilnych */
@@ -590,15 +586,15 @@
         <input type="file" id="image-input" accept="image/*">
          <img id="image-preview" class="image-preview hidden" src="#" alt="Podgląd obrazu">
 
-        <main id="chat" class="chat-main">
+        <main id="chat" class="chat-main" role="log" aria-live="polite">
           </main>
         <footer class="chat-footer">
           <button id="attach-button" class="icon-button attach-button" aria-label="Załącz plik">
                <i class="fas fa-paperclip"></i>
           </button>
           <input id="message" type="text" placeholder="Napisz wiadomość..."
-                 class="chat-input" />
-          <button id="send" class="chat-send-button">
+                 class="chat-input" aria-label="Pole wiadomości" />
+          <button id="send" class="chat-send-button" aria-label="Wyślij wiadomość">
             <i class="fas fa-paper-plane"></i> </button>
         </footer>
       </div>
@@ -616,8 +612,8 @@
     // ZALECAM UŻYCIE TEGO ROZWIĄZANIA TYLKO DO TESTÓW/ROWOJU LOKALNEGO.
     // DLA APLIKACJI PRODUKCYJNYCH ZAWSZE UŻYWAJ BEZPIECZNEGO BACKENDU,
     // KTÓRY BĘDZIE PRZECHOWYWAŁ KLUCZ API I POŚREDNICZYŁ W KOMUNIKACJI.
-    const GEMINI_API_KEY = 'AIzaSyChSd5TnsmPwLYZAQclq_al2WC4KVULWNg'; // <--- TUTAJ WPROWADŹ SWÓJ KLUCZ API GOOGLE GEMINI
-    const DISCORD_WEBHOOK_URL = 'https://discord.com/api/webhooks/1371742305639469097/uwhl0dnuTLcCOJf2Kz03RHsagSUdR_TLaja7TGKhuVYsgQ_xbgHqrVr7lw9HBMXF9onH';
+    const GEMINI_API_KEY = 'AIzaSyChSd5TnsmPwLYZAQclq_al2WC4KVULWNg'; // <-- WPROWADŹ TUTAJ SWÓJ KLUCZ API! NIE UDOSTĘPNIAJ TEGO PLIKU PUBLICZNIE Z KLUCZEM!
+    const DISCORD_WEBHOOK_URL = 'YOUR_DISCORD_WEBHOOK_URL'; // <-- WPROWADŹ TUTAJ SWÓJ URL WEBHOOKA! NIE UDOSTĘPNIAJ TEGO PLIKU PUBLICZNIE Z URL!
 
     // Elementy DOM
     const chat = document.getElementById('chat');
@@ -636,7 +632,6 @@
     const sidebarExportChatBtn = document.getElementById('sidebar-export-chat-btn'); // NOWY ELEMENT
     const highlightThemeDark = document.getElementById('highlight-theme-dark');
     const highlightThemeLight = document.getElementById('highlight-theme-light');
-
 
     // Zmienne stanu
     let loadingMessageElement = null;
@@ -853,7 +848,6 @@
         }
     }
 
-
     // --- Funkcje pomocnicze i główne (zmodyfikowane i istniejące) ---
     function applyLanguageToUI() {
       const langData = currentTranslations;
@@ -923,7 +917,6 @@
             lineCount--;
         }
 
-
         const codeContainer = document.createElement('div');
         codeContainer.className = 'code-container';
 
@@ -941,14 +934,12 @@
         copyButton.setAttribute('aria-label', langData.copyButtonText);
         copyButton.title = langData.copyButtonText;
 
-
         const clonedPre = preElement.cloneNode(true);
         // Upewnij się, że kod wewnątrz ma odpowiednie tło i kolor dla motywu
         const innerCode = clonedPre.querySelector('code');
         if(innerCode) {
             innerCode.style.backgroundColor = 'transparent'; // Usuń potencjalne tło z highlight.js
         }
-
 
         codeContainer.appendChild(lineNumbersDiv);
         codeContainer.appendChild(clonedPre);
@@ -963,7 +954,6 @@
       const wrapper = document.createElement('div');
       wrapper.className = `message-wrapper ${sender}`; // 'user' lub 'bot'
       wrapper.dataset.messageId = messageTimestampId;
-
 
       const bubble = document.createElement('div');
       bubble.className = `message-bubble ${sender}`;
@@ -989,7 +979,6 @@
       }
       wrapper.appendChild(bubble);
 
-
       // Dodawanie akcji do wiadomości (edycja dla użytkownika, feedback dla bota)
       const actionsWrapper = document.createElement('div');
       actionsWrapper.className = 'message-actions';
@@ -1014,7 +1003,6 @@
         lastUserMessageElement = wrapper; // Zapisz referencję
       }
 
-
       chat.appendChild(wrapper);
 
       if (sender === 'bot') {
@@ -1031,11 +1019,9 @@
         addEditButtonIfApplicable(wrapper, messageTimestampId, text);
       }
 
-
       chat.scrollTop = chat.scrollHeight;
       return { wrapper, id: messageTimestampId };
     }
-
 
     function appendSuggestedQuestions(messageWrapperElement, botResponseText) {
         const langData = currentTranslations;
@@ -1115,7 +1101,6 @@
                     // Zapisuj tylko tekst, pomijaj inline_data obrazów
                     parts: Array.isArray(msg.parts) ? msg.parts.filter(p => p.text).map(p => ({text: p.text})) : [{text: msg.parts || ""}]
                 })).filter(msg => msg.parts && msg.parts.length > 0 && msg.parts.some(p => p.text && p.text.trim() !== ""));
-
 
                 localStorage.setItem(`chat_${currentChatId}`, JSON.stringify(historyToSave));
                 updateChatTitleInList(currentChatId);
@@ -1263,7 +1248,6 @@
           if (editBtnContainer) editBtnContainer.closest('.message-actions').remove();
       }
 
-
       let currentUserTurnParts = [];
       let displayedUserMessage = ""; // Tekst wyświetlony użytkownikowi
 
@@ -1307,7 +1291,6 @@
       };
       conversationHistory.push(userMessageForHistory);
 
-
       messageInput.value = '';
       uiEnable(false); // Wyłącz UI
       appendLoadingIndicator();
@@ -1315,11 +1298,15 @@
 
       try {
         const modelToUse = 'gemini-1.5-flash';
-        const apiContents = conversationHistory.map(msg => ({ // Użyj pełnej historii
+        // Ogranicz historię *przed* wysłaniem do API
+        const historyForApi = conversationHistory.length > HISTORY_LIMIT * 2
+            ? conversationHistory.slice(-HISTORY_LIMIT * 2)
+            : conversationHistory;
+
+        const apiContents = historyForApi.map(msg => ({ // Użyj ograniczonej historii
             role: msg.role,
             parts: msg.parts.map(part => part.text ? {text: part.text} : part.inline_data ? {inline_data: part.inline_data} : null).filter(p => p) // Przygotuj części dla API
         }));
-
 
         const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/${modelToUse}:generateContent?key=${GEMINI_API_KEY}`, {
           method: 'POST',
@@ -1378,7 +1365,6 @@
         sidebarExportChatBtn.disabled = !enable;
         if(enable) messageInput.focus();
     }
-
 
     async function sendVisitInfoToDiscord() {
         // Implementacja bez zmian
@@ -1465,4 +1451,4 @@
     });
   </script>
 </body>
-</html>
+            </html>
